Perzonalición terminada y adición de recomendaciones de frontend mentor

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
   
-  <title>QR code component</title>
+  <title>QR Code Component | Gabriel Mayorga</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -21,27 +21,29 @@
 </head>
 <body>
 
-<section>
-  <div class="main-container">
+<main>
+  <section class="main-container">
     <div class="card-container">
       <div class="image">
-        <img src="./images/image-qr-code.png" alt="QR Code">
+        <img src="./images/qr-code.png" alt="QR Code">
       </div>
       <div class="content">
         <h1 class="title">
-          Improve your front-end skills by building projects
+          See all my projects and my technological stack
         </h1>
         <p class="caption">
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+          Scan the QR code to visit my website and discover more about me
         </p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Gabriel Mayorga</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.gabrielmayorga.com">Gabriel Mayorga</a>.
+    </div>
+  </footer>
 </body>
 </html>
