--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <body>
 
 <main>
-  <section class="main-container">
-    <div class="card-container">
+  <section class="card-container">
       <div class="image">
         <img src="./images/qr-code.png" alt="QR Code">
       </div>
@@ -35,7 +34,6 @@
           Scan the QR code to visit my website and discover more about me
         </p>
       </div>
-    </div>
   </section>
 </main>
   
